# TITAN-LIVE

./: .env-main  .gitattributes  .gitignore  .vercelignore  001_governance_v2.sql  AZ-MANIFEST-20251027_145352.json  AZ-MANIFEST-20251027_145638.json  AZ-STATUS-REPORT-20251027_145352.txt  AZ-STATUS-REPORT-20251027_145644.txt  Jarvis Root.lnk  Jarvis-Autostart-Scheduler.ps1  Qwen_html_20251002_3zvfos132.html  README-OPS.txt  Run-Titan-Test.ps1  SECURITY.md  SYSTEM_OVERVIEW.md  Start-Titan-Stack.ps1  Stop-Titan-Stack.ps1  TITAN_AI_CODE_POLICY.md  TITAN_AI_Control_Plane_v2.pptx  TITAN_BLOCK_MAP.md  TITAN_FULL_SECRETS.txt  TITAN_PRODUCT_CONTRACT.md  TITAN_REALITY.md  TITAN_SECRETS_TEMPLATE.txt  TITAN_STATUS.html  add_fail_target.py  add_single_target.py  aion-zero-control-plane.2025-12-18.private-key.pem  apply_innovations_schema.py  apply_nab_schema.py  apply_roadmap.py  apply_schema.py  auth_debug.txt  az_roadmap.jsonl  board-meeting.html  check_queue.py  debug_gemini.py  debug_scan.py  debug_schema.py  (+41 more)
py/: demo_courier.py  fingerprint.py  graph_builder.py  jarvis_architect.py  jarvis_brain_local.py  jarvis_chat.py  jarvis_doctor.py  jarvis_gatekeeper.py  jarvis_knowledge.py  jarvis_puppet.py  jarvis_revenue_gen.py  jarvis_sae.py  jarvis_vision.py  packager.py  pyproject.toml  reflex_engine.py  requirements.txt
py/agents/: sample_hello.py
py/aogrl_ops_pack/: __init__.py  api.py  cache.py  cli.py  http_client.py  http_client.py.bak_20251030_1133  http_client.py.bak_20251030_1140  settings.py  (+2 more)
py/aogrl_ops_pack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+3533 files in other folders)
